// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots DateTimePreferences a story 1`] = `
<span>
  <div>
    <section
      style={
        Object {
          "display": "flex",
          "justifyContent": "space-between",
          "padding": "1rem 0",
        }
      }
    >
      <span
        style={
          Object {
            "color": "#59626a",
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "1rem",
            "fontWeight": 400,
          }
        }
      >
        Time format
      </span>
      <form
        onChange={undefined}
      >
        <input
          checked={true}
          id="twelveHourFormat"
          name="time-format"
          type="radio"
          value="12"
        />
        <label
          for="twelveHourFormat"
        >
          <span
            style={
              Object {
                "color": "#59626a",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1rem",
                "fontWeight": 400,
              }
            }
          >
            12 hour
          </span>
        </label>
        <input
          checked={undefined}
          id="twentyFourHourFormat"
          name="time-format"
          type="radio"
          value="24"
        />
        <label
          for="twentyFourHourFormat"
        >
          <span
            style={
              Object {
                "color": "#323b43",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1rem",
                "fontWeight": 400,
              }
            }
          >
            24 hour
          </span>
        </label>
      </form>
    </section>
    <hr
      style={
        Object {
          "background": "#e6ebef",
          "border": "none",
          "boxSizing": "border-box",
          "height": "0.063rem",
          "marginBottom": "0.5rem",
          "marginTop": "0.5rem",
          "width": "100%",
        }
      }
    />
    <section
      style={
        Object {
          "display": "flex",
          "justifyContent": "space-between",
          "padding": "1rem 0",
        }
      }
    >
      <span
        style={
          Object {
            "color": "#59626a",
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "1rem",
            "fontWeight": 400,
          }
        }
      >
        Day to start the week
      </span>
      <form
        style={
          Object {
            "minWidth": "185px",
          }
        }
      >
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <select
            aria-label={null}
            disabled={false}
            onChange={[Function]}
            style={
              Object {
                "MozAppearance": "none",
                "WebkitAppearance": "none",
                "appearance": "none",
                "background": "transparent",
                "border": "0.063rem solid #e6ebef",
                "borderRadius": "0.126rem",
                "color": "#59626a",
                "fontSize": "0.75rem",
                "height": "2rem",
                "padding": "0 1.5rem 0 0.5rem",
                "width": "100%",
              }
            }
            value="Sunday"
          >
            <option
              value="Sunday"
            >
              Sunday
            </option>
            <option
              value="Monday"
            >
              Monday
            </option>
          </select>
          <div
            style={
              Object {
                "pointerEvents": "none",
                "position": "absolute",
                "right": "0.5rem",
                "top": "0.5rem",
              }
            }
          >
            <svg
              height="100%"
              style={
                Object {
                  "fill": "#59626a",
                  "height": "1rem",
                  "width": "1rem",
                }
              }
              version="1.1"
              viewBox="0 0 16 16"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            >
              <g
                className="shuttleGray"
              >
                <path
                  d="M4.90573685,4.61438297 C4.5159485,4.22537555 4.51510793,3.59709045 4.90996552,3.20500565 L4.90996552,3.20500565 C5.30208929,2.81563546 5.93536183,2.81786315 6.32490003,3.21046581 L11.2750374,8.19954548 C11.6643604,8.59193123 11.6645756,9.22591178 11.2750374,9.61606213 L6.32490003,14.5739785 C5.93557705,14.9639132 5.3048231,14.9648641 4.90996552,14.5699959 L4.90996552,14.5699959 C4.51784174,14.1778616 4.51273549,13.5497061 4.9163418,13.1493324 L8.84038203,9.25672113 C9.03897712,9.05971665 9.04484713,8.74520064 8.84038203,8.54114518 L4.90573685,4.61438297 Z"
                  transform="translate(8.089966, 8.890003) scale(-1, 1) rotate(-270.000000) translate(-8.089966, -8.890003) "
                />
              </g>
            </svg>
          </div>
        </div>
      </form>
    </section>
  </div>
</span>
`;

exports[`Snapshots DateTimePreferences time format can be 24 hour 1`] = `
<span>
  <div>
    <section
      style={
        Object {
          "display": "flex",
          "justifyContent": "space-between",
          "padding": "1rem 0",
        }
      }
    >
      <span
        style={
          Object {
            "color": "#59626a",
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "1rem",
            "fontWeight": 400,
          }
        }
      >
        Time format
      </span>
      <form
        onChange={[Function]}
      >
        <input
          checked={false}
          id="twelveHourFormat"
          name="time-format"
          type="radio"
          value="12"
        />
        <label
          for="twelveHourFormat"
        >
          <span
            style={
              Object {
                "color": "#59626a",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1rem",
                "fontWeight": 400,
              }
            }
          >
            12 hour
          </span>
        </label>
        <input
          checked={true}
          id="twentyFourHourFormat"
          name="time-format"
          type="radio"
          value="24"
        />
        <label
          for="twentyFourHourFormat"
        >
          <span
            style={
              Object {
                "color": "#323b43",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1rem",
                "fontWeight": 400,
              }
            }
          >
            24 hour
          </span>
        </label>
      </form>
    </section>
    <hr
      style={
        Object {
          "background": "#e6ebef",
          "border": "none",
          "boxSizing": "border-box",
          "height": "0.063rem",
          "marginBottom": "0.5rem",
          "marginTop": "0.5rem",
          "width": "100%",
        }
      }
    />
    <section
      style={
        Object {
          "display": "flex",
          "justifyContent": "space-between",
          "padding": "1rem 0",
        }
      }
    >
      <span
        style={
          Object {
            "color": "#59626a",
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "1rem",
            "fontWeight": 400,
          }
        }
      >
        Day to start the week
      </span>
      <form
        style={
          Object {
            "minWidth": "185px",
          }
        }
      >
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <select
            aria-label={null}
            disabled={false}
            onChange={[Function]}
            style={
              Object {
                "MozAppearance": "none",
                "WebkitAppearance": "none",
                "appearance": "none",
                "background": "transparent",
                "border": "0.063rem solid #e6ebef",
                "borderRadius": "0.126rem",
                "color": "#59626a",
                "fontSize": "0.75rem",
                "height": "2rem",
                "padding": "0 1.5rem 0 0.5rem",
                "width": "100%",
              }
            }
            value="Sunday"
          >
            <option
              value="Sunday"
            >
              Sunday
            </option>
            <option
              value="Monday"
            >
              Monday
            </option>
          </select>
          <div
            style={
              Object {
                "pointerEvents": "none",
                "position": "absolute",
                "right": "0.5rem",
                "top": "0.5rem",
              }
            }
          >
            <svg
              height="100%"
              style={
                Object {
                  "fill": "#59626a",
                  "height": "1rem",
                  "width": "1rem",
                }
              }
              version="1.1"
              viewBox="0 0 16 16"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            >
              <g
                className="shuttleGray"
              >
                <path
                  d="M4.90573685,4.61438297 C4.5159485,4.22537555 4.51510793,3.59709045 4.90996552,3.20500565 L4.90996552,3.20500565 C5.30208929,2.81563546 5.93536183,2.81786315 6.32490003,3.21046581 L11.2750374,8.19954548 C11.6643604,8.59193123 11.6645756,9.22591178 11.2750374,9.61606213 L6.32490003,14.5739785 C5.93557705,14.9639132 5.3048231,14.9648641 4.90996552,14.5699959 L4.90996552,14.5699959 C4.51784174,14.1778616 4.51273549,13.5497061 4.9163418,13.1493324 L8.84038203,9.25672113 C9.03897712,9.05971665 9.04484713,8.74520064 8.84038203,8.54114518 L4.90573685,4.61438297 Z"
                  transform="translate(8.089966, 8.890003) scale(-1, 1) rotate(-270.000000) translate(-8.089966, -8.890003) "
                />
              </g>
            </svg>
          </div>
        </div>
      </form>
    </section>
  </div>
</span>
`;

exports[`Snapshots DateTimePreferences week can start on Monday 1`] = `
<span>
  <div>
    <section
      style={
        Object {
          "display": "flex",
          "justifyContent": "space-between",
          "padding": "1rem 0",
        }
      }
    >
      <span
        style={
          Object {
            "color": "#59626a",
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "1rem",
            "fontWeight": 400,
          }
        }
      >
        Time format
      </span>
      <form
        onChange={[Function]}
      >
        <input
          checked={true}
          id="twelveHourFormat"
          name="time-format"
          type="radio"
          value="12"
        />
        <label
          for="twelveHourFormat"
        >
          <span
            style={
              Object {
                "color": "#59626a",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1rem",
                "fontWeight": 400,
              }
            }
          >
            12 hour
          </span>
        </label>
        <input
          checked={undefined}
          id="twentyFourHourFormat"
          name="time-format"
          type="radio"
          value="24"
        />
        <label
          for="twentyFourHourFormat"
        >
          <span
            style={
              Object {
                "color": "#323b43",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1rem",
                "fontWeight": 400,
              }
            }
          >
            24 hour
          </span>
        </label>
      </form>
    </section>
    <hr
      style={
        Object {
          "background": "#e6ebef",
          "border": "none",
          "boxSizing": "border-box",
          "height": "0.063rem",
          "marginBottom": "0.5rem",
          "marginTop": "0.5rem",
          "width": "100%",
        }
      }
    />
    <section
      style={
        Object {
          "display": "flex",
          "justifyContent": "space-between",
          "padding": "1rem 0",
        }
      }
    >
      <span
        style={
          Object {
            "color": "#59626a",
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "1rem",
            "fontWeight": 400,
          }
        }
      >
        Day to start the week
      </span>
      <form
        style={
          Object {
            "minWidth": "185px",
          }
        }
      >
        <div
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <select
            aria-label={null}
            disabled={false}
            onChange={[Function]}
            style={
              Object {
                "MozAppearance": "none",
                "WebkitAppearance": "none",
                "appearance": "none",
                "background": "transparent",
                "border": "0.063rem solid #e6ebef",
                "borderRadius": "0.126rem",
                "color": "#59626a",
                "fontSize": "0.75rem",
                "height": "2rem",
                "padding": "0 1.5rem 0 0.5rem",
                "width": "100%",
              }
            }
            value="Monday"
          >
            <option
              value="Sunday"
            >
              Sunday
            </option>
            <option
              value="Monday"
            >
              Monday
            </option>
          </select>
          <div
            style={
              Object {
                "pointerEvents": "none",
                "position": "absolute",
                "right": "0.5rem",
                "top": "0.5rem",
              }
            }
          >
            <svg
              height="100%"
              style={
                Object {
                  "fill": "#59626a",
                  "height": "1rem",
                  "width": "1rem",
                }
              }
              version="1.1"
              viewBox="0 0 16 16"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            >
              <g
                className="shuttleGray"
              >
                <path
                  d="M4.90573685,4.61438297 C4.5159485,4.22537555 4.51510793,3.59709045 4.90996552,3.20500565 L4.90996552,3.20500565 C5.30208929,2.81563546 5.93536183,2.81786315 6.32490003,3.21046581 L11.2750374,8.19954548 C11.6643604,8.59193123 11.6645756,9.22591178 11.2750374,9.61606213 L6.32490003,14.5739785 C5.93557705,14.9639132 5.3048231,14.9648641 4.90996552,14.5699959 L4.90996552,14.5699959 C4.51784174,14.1778616 4.51273549,13.5497061 4.9163418,13.1493324 L8.84038203,9.25672113 C9.03897712,9.05971665 9.04484713,8.74520064 8.84038203,8.54114518 L4.90573685,4.61438297 Z"
                  transform="translate(8.089966, 8.890003) scale(-1, 1) rotate(-270.000000) translate(-8.089966, -8.890003) "
                />
              </g>
            </svg>
          </div>
        </div>
      </form>
    </section>
  </div>
</span>
`;
